@@ -6,6 +6,7 @@ Version 0.16
  Sim: Support protocols with ATSP{A,}{0-9,A-C}, show appropriate headers
  Sim: Add --benchmark option for occasional updates
  Sim: Refactor to simplify main loop
+ Sim: Add a timeout for each individual ecu
 
 Version 0.15 (released 2010-06-18)
  Sim: Always return errors in groups of three, padded if necessary
